--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "precommit": "lint-staged",
     "preCommitInit": "node ./node_modules/husky/lib/installer/bin.js install",
     "test:report": "jest --coverage --coverageReporters=text-lcov | coveralls",
-    "dll": "webpack --config ./scripts/webpack.dll.config.js"
+    "dll": "webpack --config ./scripts/webpack.dll.config.js",
+    "cypress:open": "cypress open"
   },
   "husky": {
     "hooks": {
@@ -159,6 +160,7 @@
     "clipboard": "^2.0.4",
     "core-js": "^2.6.10",
     "crypto-js": "^3.1.9-1",
+    "cypress": "^13.6.2",
     "draft-js": "^0.10.3",
     "echarts": "^4.5.0",
     "enzyme-adapter-react-16": "^1.6",
